radarr/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  namespace: default
  labels:
    app: radarr
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data        
      volumes:
        - name: config
          nfs:
            path: /mnt/RUST/K3S/mediastack/appdata/radarr
            server: 10.10.0.105
        - name: data
          nfs:
            path: /mnt/RUST/K3S/data
            server: 10.10.0.105
