radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
spec:
  selector:
    app: radarr
  ports:
  - name: http
    targetPort: 7878
    port: 7878
